Fixed documents from overflowing

--- a/my-app/app/components/documents.css
+++ b/my-app/app/components/documents.css
@@ -1,5 +1,6 @@
 .documents-parent-container {
-  height: 800px;
+  height: fit-content;
+  padding-bottom: 50px;
   background-color: white;
   width: 100%;
   border-left: 1px solid black;
